<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_quick_chat_app">Welcome To Quick Chat App</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="login_or_create_an_account_to_get_started">Login or create an account to get started</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="number">Number</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="display_name">Display Name</string>
    <string name="create">create</string>
    <string name="chat_body">Chat Body</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="user_name">User Name</string>
    <string name="submit">Submit</string>
    <string name="choose">Choose</string>
    <string name="always_use">Always Use</string>
    <string name="just_one">Just One</string>
    <string name="message">Message</string>
    <string name="receiver_message">Receiver Message</string>
    <string name="_00_00_pm">00:00 Pm</string>
    <string name="send_message">Send Message</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
</resources>