<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:layout_marginBottom="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/receiver_drawable">

        <TextView
            android:id="@+id/itemReceiverMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:maxWidth="300dp"
            android:padding="5dp"
            android:text="@string/receiver_message"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemReceiverMessage"
            tools:ignore="UseCompoundDrawables">


            <TextView
                android:id="@+id/itemReceiverTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00_pm" />

            <ImageView
                android:id="@+id/itemReceiverSeen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/not_seen_receiver_icon" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>