<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_marginBottom="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:background="@drawable/sender_drawable">

        <TextView
            android:id="@+id/itemSenderMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:maxWidth="300dp"
            android:padding="5dp"
            android:text="@string/send_message"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemSenderMessage"
            tools:ignore="UseCompoundDrawables">


            <TextView
                android:id="@+id/itemSenderTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00_pm"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/itemSenderSeen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/not_seen_sender_icon" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>